--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
 theme: jekyll-theme-slate
+
+title: "WiTrace"
+#email: "{firstname}trivedi@umass.edu"
+description: WiFi based Contact Tracing
+baseurl: "" #"/blog" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: amee_tweets
+github_username:  ameetrivedi
